--- a/README.rdoc
+++ b/README.rdoc
@@ -23,6 +23,8 @@ Things you may want to cover:
 
 * ...
 
+Throttle in config/application.rb limited to 100000 requests/day
+
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
